<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.rdypda.view.activity.LlddrMsgActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:title="@string/more_msg"
            android:id="@+id/toolbar"
            ></android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="@drawable/table_left_top">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/lldh"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="@drawable/table_right_top">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="10086"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="@drawable/table_left_bottom">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/wlbh"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="@drawable/table_right_bottom">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="10011"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="@drawable/table_left_bottom">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/wlmc"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="@drawable/table_right_bottom">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="鸡毛蒜皮"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="@drawable/table_left_bottom">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/wlpc"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="@drawable/table_right_bottom">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="250"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="@drawable/table_left_bottom">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/gys"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="@drawable/table_right_bottom">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="中国移动"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="@drawable/table_left_bottom">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/lhrq"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="@drawable/table_right_bottom">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="2017-12-22 14:00"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="@drawable/table_left_bottom">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/sl"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="@drawable/table_right_bottom">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="998"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="@drawable/table_left_bottom">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/dw"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="@drawable/table_right_bottom">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="吨"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="@drawable/table_left_bottom">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/kwdm"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="@drawable/table_right_bottom">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="9527"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="@drawable/table_left_bottom">
                    <TextView
                        android:layout_width="80dp"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/tmbh"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="@drawable/table_right_bottom">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="1771923276523"/>
                </LinearLayout>
            </LinearLayout>


            <com.rdypda.view.widget.PowerButton
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/color_green"
                android:layout_margin="20dp"
                android:id="@+id/print_btn"
                android:textColor="@android:color/white"
                android:text="@string/dy"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
