<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.rdypda.view.activity.LoginActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.rdypda.view.widget.PowerButton
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/setting_btn"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="10dp"
                android:background="@drawable/setting_icon"/>
        </FrameLayout>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="120dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:src="@drawable/circle_blu"/>
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:id="@+id/user_img"
                    android:src="@drawable/defualt_user"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="230dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                >
                <Spinner
                    android:layout_width="230dp"
                    android:layout_height="45dp"
                    android:id="@+id/factory_list"></Spinner>
            </FrameLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/user_id_layout"
                android:layout_width="230dp"
                android:layout_height="85dp"
                android:layout_gravity="center_horizontal"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/TextAppearance.Design.Error">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="230dp"
                    android:layout_height="45dp"
                    android:id="@+id/user_id_ed"
                    android:hint="@string/id_tip"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/user_pwd_layout"
                android:layout_width="230dp"
                android:layout_height="85dp"
                android:layout_gravity="center_horizontal"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/TextAppearance.Design.Error">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/user_pwd_ed"
                    android:layout_width="230dp"
                    android:layout_height="45dp"
                    android:hint="@string/pwd_tip"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <FrameLayout
                android:layout_width="230dp"
                android:layout_height="30dp"
                android:layout_gravity="center">
                <CheckBox
                    android:id="@+id/remember"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:gravity="center_vertical"
                    android:textSize="15dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/remember_pwd"/>
            </FrameLayout>
            <android.support.v7.widget.CardView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="50dp"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:id="@+id/login_btn"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="18dp"
                    android:textColor="@android:color/white"
                    android:text="@string/login"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
